--- a/archine-blog/pom.xml
+++ b/archine-blog/pom.xml
@@ -22,5 +22,10 @@
             <artifactId>archine-framework</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter</artifactId>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 </project>
