--- a/archine-blog/src/main/resources/application.yml
+++ b/archine-blog/src/main/resources/application.yml
@@ -10,6 +10,26 @@ spring:
     multipart:
       max-file-size: 2MB
       max-request-size: 5MB
+  redis:
+    #redis数据库索引（默认为0）
+    database: 0
+    #redis服务器地址
+    host: localhost
+    #redis端口
+    post: 6379
+    #Redis服务器连接密码
+    password:
+    pool:
+      # 连接池最大连接数（使用负值表示没有限制）
+      max-active: 200
+      # 连接池最大阻塞等待时间（使用负值表示没有限制）
+      max-wait: -1
+      # 连接池中的最大空闲连接
+      max-idle: 10
+      # 连接池中的最小空闲连接
+      min-idle: 0
+    # 连接超时时间毫秒
+    timeout: 5000
 mybatis-plus:
   configuration:
     # 日志
@@ -20,3 +40,7 @@ mybatis-plus:
       logic-delete-value: 1
       logic-not-delete-value: 0
       id-type: auto
+
+
+
+
