--- a/archine-blog/src/main/resources/application.yml
+++ b/archine-blog/src/main/resources/application.yml
@@ -16,20 +16,21 @@ spring:
     #redis服务器地址
     host: 47.100.84.35
     #redis端口
-    post: 6379
+    port: 6379
     #Redis服务器连接密码
     password: pwd123
-    pool:
-      # 连接池最大连接数（使用负值表示没有限制）
-      max-active: 200
-      # 连接池最大阻塞等待时间（使用负值表示没有限制）
-      max-wait: -1
-      # 连接池中的最大空闲连接
-      max-idle: 10
-      # 连接池中的最小空闲连接
-      min-idle: 0
-    # 连接超时时间毫秒
+    #连接超时时间（毫秒）
     timeout: 50000
+    #连接池最大连接数（使用负值表示没有限制）
+    pool:
+      max-active: 8
+      #连接池最大阻塞等待时间（使用负值表示没有限制）
+      max-wait: -1
+      #连接池中的最大空闲连接
+      max-idle: 8
+      #连接池中的最小空闲连接
+      min-idle: 0
+
 
 mybatis-plus:
   configuration:
@@ -41,6 +42,14 @@ mybatis-plus:
       logic-delete-value: 1
       logic-not-delete-value: 0
       id-type: auto
+aliyun:
+  oss:
+    accessKeyId: LTAI5tFZXiBAvKdWKZhMk6bz
+    accessKeySecret: tgUN01dKasAKHcl9HHoqeF30yJGOU0
+    bucketName: dxq-images
+    endpoint: http://oss-cn-shanghai.aliyuncs.com/
+    firstKey: Archine/img/202110220058551.png
+
 
 
 
