--- a/archine-framework/pom.xml
+++ b/archine-framework/pom.xml
@@ -90,6 +90,10 @@
             <groupId>io.springfox</groupId>
             <artifactId>springfox-swagger-ui</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.github.xiaoymin</groupId>
+            <artifactId>knife4j-openapi2-spring-boot-starter</artifactId>
+        </dependency>
 
 
     </dependencies>
