--- a/pom.xml
+++ b/pom.xml
@@ -78,10 +78,17 @@
             <artifactId>springfox-swagger-ui</artifactId>
             <version>2.9.2</version>
         </dependency>
+<!--        http://localhost:7777/swagger-ui.html-->
+        <dependency>
+            <groupId>com.github.xiaoymin</groupId>
+            <artifactId>knife4j-openapi2-spring-boot-starter</artifactId>
+            <version>4.1.0</version>
+        </dependency>
+<!--        http://localhost:7777/doc.html-->
+
     </dependencies>
 
 </dependencyManagement>
-
     <build>
         <plugins>
             <plugin>
